--- a/style.css
+++ b/style.css
@@ -2,15 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    margin: 0 auto;
     max-width: 25rem;
 }
 
-img{
-    width: 50%;
+#projects{
+    display: flex;
+    justify-content: space-between;
+    flex-flow: column;
+}
+
+#projects a{
     display: block;
 }
 
