--- a/projects/final/animation/style.css
+++ b/projects/final/animation/style.css
@@ -3,3 +3,52 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: black;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+
+    height: 100%;
+    width: 100%;
+    background-color: aqua;
+}
+
+.paddle{
+    background-color: white;
+    width: 2rem;
+    height: 8rem;
+}
+
+#p1{
+    margin-left: 0;
+}
+
+#p2{
+    margin-right: 0;
+}
+
+#ball{
+    background-color: white;
+
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+
+    animation: ball 6s infinite linear;
+}
+
+@keyframes ball {
+    0%{
+        left: 50%;
+    }
+    50%{
+        left: 90%;
+    }
+    100%{
+        left: 50%;
+    }
+}
