--- a/projects/final/animation/style.css
+++ b/projects/final/animation/style.css
@@ -8,31 +8,43 @@ body{
     background-color: black;
 }
 
-.container{
-    display: flex;
-    align-items: center;
 
-    height: 100%;
-    width: 100%;
-    background-color: aqua;
-}
 
 .paddle{
-    background-color: white;
+    background-color: grey;
+    border: .15rem solid white;
+
+    position: absolute;
+    z-index: 2;
+
     width: 2rem;
     height: 8rem;
 }
 
 #p1{
     margin-left: 0;
+
+    left: 5%;
+    top: 45%;
+
+    animation: p1 6s infinite linear;
 }
 
 #p2{
     margin-right: 0;
+
+    left: 90%;
+    top: 45%;
+
+    animation: p2 6s infinite linear;
 }
 
 #ball{
     background-color: white;
+    border: .15rem solid grey;
+
+    position: absolute;
+    z-index: 1;
 
     width: 4rem;
     height: 4rem;
@@ -43,12 +55,44 @@ body{
 
 @keyframes ball {
     0%{
-        left: 50%;
+        left: 45%;
+        top: 45%;
     }
-    50%{
-        left: 90%;
+    20%{
+        left: 85%;
+        top: 45%;
+    }
+    40%{
+        left: 5%;
+        top: 80%;
+    }
+    60%{
+        left: 85%;
+        top: 10%;
+    }
+    80%{
+        left: 5%;
+        top: 45%;
     }
     100%{
-        left: 50%;
+        left: 45%;
     }
+}
+
+@keyframes p1{
+    0%{top: 45%}
+    20%{top: 20%;}
+    40%{top: 80%;}
+    60%{top: 10%;}
+    80%{top: 40%;}
+    100%{top: 45%;}
+}
+
+@keyframes p2{
+    0%{top: 20%;}
+    20%{top: 40%;}
+    40%{top: 60%;}  
+    60%{top: 10%;}
+    80%{top: 80%;}
+    100%{top: 20%;}
 }
