--- a/projects/final/animation/style.css
+++ b/projects/final/animation/style.css
@@ -76,11 +76,12 @@ body{
     }
     100%{
         left: 45%;
+        top: 45%;
     }
 }
 
 @keyframes p1{
-    0%{top: 45%}
+    0%{top: 45%;}
     20%{top: 20%;}
     40%{top: 80%;}
     60%{top: 10%;}
