--- a/projects/final/style.css
+++ b/projects/final/style.css
@@ -1,19 +1,110 @@
+:root {
+    --color-bg: #CEF0E3;
+  --color-hf: #88B6A4;
+  --color-h1: #1F3A2F;
+  --color-h2: #294D3F;
+  --color-p: #224335;
+  --color-a: #1A3027;
+  --color-a-hover: #5F7A6F;
+}
+
 *{
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
+
+    min-width: 15rem;
+}
+
+body{
+    background-color: var(--color-bg);
 }
 
 header{
     text-align: center;
+    background-color: var(--color-hf);
+    
+    width: 100%;
+
+    padding: 2rem;
 }
 
 footer{
     text-align: center;
+    background-color: var(--color-hf);
+
+    width: 100%;
+
+    padding: 1rem;
+}
+
+footer a{
+    display: block;
+}
+
+a{
+    color: var(--color-a);
+
+    font-size: 1rem;
+}
+
+a:hover{
+    color: var(--color-a-hover);
+}
+
+img{
+    width: 500px;
+    max-width: 50%;
+
+    border: .5rem solid var(--color-h2);
+
+    margin-left: 25%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+h1{
+    color: var(--color-h1);
+
+    margin-bottom: 1rem;
+
+    font-size: 4rem;
+}
+
+h2{
+    color: var(--color-h2);
+
+    font-size: 2rem;
+}
+
+h3{
+    color: var(--color-h1);
+
+    font-size: 1.5rem;
+
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
+h4{
+    color: var(--color-h2);
+
+    font-size: 1.25rem;
+
+    margin-bottom: .5rem;
 }
 
 p{
-    max-width: 25rem;
+    max-width: 30rem;
+    color: var(--color-p);
+
+    font-size: 1rem;
+
+    margin-bottom: .5rem;
+}
+
+#content a{
+    display: inline;
 }
 
 #content{
@@ -22,10 +113,16 @@ p{
     flex-flow: column;
 }
 
+section h3{
+    align-self: left;
+}
+
 section h4{
     margin-left: 5%;
+    align-self: left;
 }
 
 section p{
     margin-left: 10%;
+    align-self: left;
 }
