--- a/projects/final/style.css
+++ b/projects/final/style.css
@@ -27,6 +27,8 @@ header{
     width: 100%;
 
     padding: 2rem;
+
+    border: 1rem solid var(--color-h1);
 }
 
 footer{
@@ -36,6 +38,8 @@ footer{
     width: 100%;
 
     padding: 1rem;
+
+    border: .5rem solid var(--color-h1);
 }
 
 footer a{
